--- a/work-anteckntovej.html
+++ b/work-anteckntovej.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Presenter Demo</title>
+<title>Work 1 : LDSLide</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="ldslides.css" />
 <script type="module">
