--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <title>Index : LD Slides</title>
 <meta charset="utf-8" />
-<h1>Linked Data Slides</h1>
-<ul>
-  <li><a href="work-anteckntovej.html">work-anteckntovej</a></li>
-  <li><a href="digirepr-magazinadolescentes.html">digirepr-magazinadolescentes</a></li>
-</ul>
+<style>
+  @import url('ldslides.css');
+  main {
+    width: 30em;
+    margin: 11% auto 0;
+    padding: 2em 4em;
+    font-size: 2.1em;
+    background-color: #fefeee;
+    border: 1px solid #601;
+    border-radius: 12px;
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.6);
+  }
+  a {
+    text-decoration: none;
+    font-weight: bold;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
+<main>
+  <h1>Linked Data Slides</h1>
+  <ul role="menu">
+    <li><a href="work-anteckntovej.html">Extrahera verk, länka och putsa</a></li>
+    <li><a href="cleanup-electronic.html">Städa i beskrivning av digitalisering</a></li>
+    <li><a href="digirepr-magazinadolescentes.html">Digital reproduktion (samt puts)</a></li>
+    <li><a href="link-sab.html">Länka SAB</a></li>
+  </ul>
+</main>
