--- a/index.html
+++ b/index.html
@@ -21,12 +21,27 @@
     text-decoration: underline;
   }
 </style>
-<main>
+<main role="menu">
   <h1>Linked Data Slides</h1>
-  <ul role="menu">
-    <li><a href="work-anteckntovej.html">Extrahera verk, länka och putsa</a></li>
-    <li><a href="cleanup-electronic.html">Städa i beskrivning av digitalisering</a></li>
-    <li><a href="digirepr-magazinadolescentes.html">Digital reproduktion (samt puts)</a></li>
-    <li><a href="link-sab.html">Länka SAB</a></li>
-  </ul>
+  <section>
+    <h2>Länka verk</h2>
+    <ul>
+      <li><a href="work-anteckntovej.html">Extrahera verk, länka och putsa</a></li>
+    </ul>
+  </section>
+  <section>
+    <h2>Digitaliseringar</h2>
+    <ul>
+      <li><a href="cleanup-digitalized-print-1.html">Ordna beskrivning av digitalisering (tryckt bok)</a></li>
+      <li><a href="digirepr-magazinadolescentes.html">Beskriv ny digital reproduktion (med förberedelser)</a></li>
+      <li><a href="associatedmedia.html">Länka till nedladdningsbara filer</a></li>
+      <li><a href="cleanup-digitalized-cartograpy-1.html">Ordna beskrivning av digitalisering (karta)</a></li>
+    </ul>
+  </section>
+  <section>
+    <h2>Ämnen, genre/form, klassifikation</h2>
+    <ul>
+      <li><a href="link-sab.html">Länka klassifikation med ämnen och genre/form</a></li>
+    </ul>
+  </section>
 </main>
